src/objects/Project_Participant__c.object
<CustomObject>
    <description>All Vendors participating in this project</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Participants</relationshipLabel>
        <relationshipName>Project_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Of_Expertise__c</fullName>
        <label>Area Of Expertise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Participants</relationshipLabel>
        <relationshipName>Project_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Tier__c</fullName>
        <label>Project Tier</label>
        <picklist>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Participant</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Project Participants</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>